// {C} Copyright 2017 Pensando Systems Inc. All rights reserved.

syntax = "proto3";
// Service name
package auth;

// Mandatory imports.
import "google/api/annotations.proto";
import public "github.com/pensando/sw/venice/utils/apigen/annotations/includes.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/pensando/sw/api/meta.proto";
import "auth.proto";

// Auth REST API
service AuthV1 {
    // Prefix for all resources served by this service.
    option (venice.apiPrefix) = "auth";
    // API Version.
    option (venice.apiVersion) = "v1";
    option (venice.apiGrpcCrudService) = "User";
    option (venice.apiGrpcCrudService) = "AuthenticationPolicy";
    option (venice.apiGrpcCrudService) = "Role";
    option (venice.apiGrpcCrudService) = "RoleBinding";

    option (venice.apiRestService) = {
         Object: "User"
         Method: [ "get", "put", "delete", "post", "list" ]
     };
    option (venice.apiRestService) = {
         Object: "AuthenticationPolicy"
         Method: [ "get", "delete", "put", "post" ]
     };
    option (venice.apiRestService) = {
          Object: "Role"
          Method: [ "get", "put", "delete", "post", "list" ]
      };
    option (venice.apiRestService) = {
          Object: "RoleBinding"
          Method: [ "get", "put", "delete", "post", "list" ]
      };
}
